# fullstackcore

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  run.sh
backend/.devcontainer/: devcontainer.json
backend/app/: Untitled.ipynb  main.py  temp.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: ai.py
backend/app/core/: config.py
backend/app/schemas/: interaction.py
frontend/: Dockerfile  docker-compose.yml  package-lock.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/Components/: Form.js
