[tool.poetry]
name = "app"
version = "0.0.1"
description = "Full stack code with React front end and fastapi backend"
authors = ["Rajesh Korde <rajesh.korde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
